# stacktrend

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-azure-function.yml  deploy-contributors-notebooks.yml  deploy-fabric-notebooks.yml  deploy-gitcollector.yml  deploy-silver-processor.yml  main_gitcollector-func.yml
docker_images/: README.md  github-collector.Dockerfile  silver-processor.Dockerfile
scripts/: create_service_principal.py  deploy_notebooks.py  test_deployment.py
src/stacktrend/: __about__.py  __init__.py
src/stacktrend/config/: __init__.py  settings.py
src/stacktrend/data/: __init__.py  medallion_architecture.py
src/stacktrend/fabric/: __init__.py  data_factory_pipelines.py  personal_repos_data_factory_pipelines.py
src/stacktrend/functions/: __init__.py  host.json  local.settings.json
src/stacktrend/functions/github_collector/: __init__.py  function.json
src/stacktrend/functions/silver_processor/: __init__.py  function.json
src/stacktrend/notebooks/: bronze_to_silver_transformation.py  github_data_ingestion.py  personal_repos_bronze_to_silver.py  personal_repos_ingestion.py  personal_repos_silver_to_gold.py  silver_to_gold_analytics.py
src/stacktrend/setup/: __init__.py  fabric_setup.py
src/stacktrend/utils/: __init__.py  azure_client.py  data_transformer.py  deploy_contributors_notebooks.py  deploy_notebooks.py  fabric_client.py  github_client.py  github_data_collector.py  llm_classifier.py
