[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacktrend"
dynamic = ["version"]
description = "Technology Adoption Observatory - Track tech trends across GitHub, Stack Overflow, and package managers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sanchit Vijay", email = "sanchitvj1026@gmail.com" }, ]

dependencies = [
    "azure-functions",
    "azure-storage-blob",
    "azure-identity",
    "requests",
    "PyGithub",
    "pandas",
    "python-dotenv",
]

[project.urls]
repository = "https://github.com/sanchitvj/stacktrend"

[tool.hatch.version]
path = "src/stacktrend/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "LICENSE",
]

[tool.ruff]
# exclude = 

[tool.mypy]
ignore_missing_imports = true