[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacktrend"
dynamic = ["version"]
description = "Technology Adoption Observatory - Track tech trends across GitHub, Stack Overflow, and package managers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sanchit Vijay", email = "sanchitvj1026@gmail.com" }, ]

dependencies = [
    "msal>=1.24.0",
    "requests>=2.31.0",
    "azure-core>=1.29.0",
    "azure-mgmt-datafactory>=3.0.0",
    "PyGithub>=1.59.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyspark>=3.4.0",
    "pyarrow>=12.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
repository = "https://github.com/sanchitvj/stacktrend"

[tool.hatch.version]
path = "src/stacktrend/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "LICENSE",
]

[tool.ruff]
# exclude = 

[tool.mypy]
ignore_missing_imports = true